# BackPropNN

./: .clang-format  .gitignore  CMakeLists.txt  README.md
data/: training2x2.txt  training3x3-4c.txt  training3x3-5c.txt  training3x3.txt  training4x4-5cN.txt  trainingAND.txt  trainingAND3.txt  trainingCOUNT.txt  trainingData.txt  trainingNAND.txt  trainingOR.txt  trainingXOR.txt
data/Counting/: Makefile  counting.cpp
data/XOR/: Makefile  txor.txt  xor  xor.cpp
doc/: Doxyfile
src/: ActivationFunctions.h  AppInfo.h  BPNN.cpp  Makefile  NNconfig.h  NNdef.h  NNtrainer.cpp  NNtrainer.h  Net.cpp  Net.h  Neuron.cpp  Neuron.h  OSstate.h  TrainingData.cpp  TrainingData.h
src-original/: neural-net-tutorial.cpp
